--- a/src/client/app/home/home.component.css
+++ b/src/client/app/home/home.component.css
@@ -41,3 +41,108 @@
   position: relative;
   top: -15px;
 }
+
+.carousel {
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.slider-item {
+  width: 260px;
+  margin: 0 12px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
+.slide-image {
+  height: 550px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+
+}
+
+:host /deep/ .slick-prev {
+  background: url("assets/ic_keyboard_arrow_left_white_48px.svg") no-repeat center;
+  left: -50px;
+  top: 50%;
+  margin-top: -24px;
+}
+
+:host /deep/ .slick-next {
+  background: url("assets/ic_keyboard_arrow_right_white_48px.svg") no-repeat center;
+  right: -50px;
+  top: 50%;
+  margin-top: -24px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  z-index: 2;
+  transition: all .1s ease-in-out;
+  background-color: rgba(16,17,18,0.7);
+
+}
+
+.slider-item:hover .overlay {
+  opacity: 1;
+  visibility: visible;
+}
+
+.overlay-title {
+  text-align: center;
+  padding-top:20px;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 65px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
+.icons {
+  position: absolute;
+  width:100%;
+  top: 50%;
+  margin-top: -33px;
+  padding:0 7px;
+  display: flex;
+  justify-content: center;
+
+
+}
+.material-icons:nth-child(-n+2){
+  margin-right:10px;
+}
+
+.material-icons.orange600 {
+  color: #FFEB3B;
+
+}
+.material-icons.orange600:hover { color: #FFFFFF; }
