--- a/src/client/app/home/home.component.css
+++ b/src/client/app/home/home.component.css
@@ -4,7 +4,7 @@
 }
 
 .film-block {
-  margin-top: 130px;
+  margin-top: 50px;
   padding: 50px 40px 40px;
   border-radius: 6px;
   background-color: rgba(255,255,255,0.03);
@@ -146,3 +146,23 @@
 
 }
 .material-icons.orange600:hover { color: #FFFFFF; }
+
+.question-area {
+
+  opacity: 0;
+  width: 100%;
+  min-height: 150px;
+  border:2px solid #FFEB3B;
+  padding: 20px;
+  margin-top: -25px;
+  -webkit-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  -ms-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
+.question-area.area-open {
+  opacity: 1;
+
+}
