--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -8,10 +8,10 @@
   </div>
   <div ipSlider [sliderProperties]="SliderProperties" class="carousel">
       <div class="slider-item" ipSliderElement *ngFor="let item of filmsList" >
-        <div class="slide-image" [ngStyle]="{ 'background-image': 'url( https://image.tmdb.org/t/p/w500/' + item.poster_path + ')'}">
+        <div class="slide-image" [ngStyle]="{ 'background-image': 'url( https://image.tmdb.org/t/p/w500/' + item?.poster_path + ')'}">
         </div>
         <div class="overlay">
-          <h1 class="overlay-title">{{item.title}}</h1>
+          <h1 class="overlay-title">{{item?.original_title}}</h1>
           <div class="icons">
             <i class="material-icons thumbs-up orange600" (click)="likeMovie(item.genre_ids, item.release_date)">thumb_up</i>
             <i class="material-icons visibility orange600" (click)="openTestAreaForFilm(item.id)">visibility</i>
